# PepeNavigates

./: CMakeLists.txt  package.xml  readme.md
config/: amcl_params.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  teb_local_planner.yaml
launch/: mapping.launch  navigation.launch  turtleSim.launch
maps/: mappy1.pgm  mappy1.yaml
src/: pepe.py  testpy.py
worlds/: maze.world
