<?xml version="1.0"?>
<package format="2">
  <name>SLAM_v1</name>
  <version>0.0.0</version>
  <description>The SLAM_v1 package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>


 <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros 
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}"
      />

  </export>
</package>
